# rqcrypt

./: .gitignore  LICENSE.txt  README.md  examples.py  pyproject.toml  requirements.txt  utils.py
ShadowCrypt/scrngV2/: scrngV2.py  utils.py
examples/: example_scrngV2.py
src/scrngV2/: scrngV2.py
tests/: test_scrngV2.py
tests/pytest/: test_scrngV2.py
tests/rng_test/: conversion.py
