[project]
name = "scrypt"
version = "0.0.1"
description = "Quantum-powered cryptography"
authors = [
    {name = "Rohan Date",email = "rohan.s.date@icloud.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "qiskit (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "qiskit-ibm-runtime (>=0.45.0,<0.46.0)",
    "pylatexenc (>=2.10,<3.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyterlab (>=4.5.2,<5.0.0)",
]

[project.optional-dependencies]
examples = [
    "tqdm (>=4.67.1,<5.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
