[project]
name = "ShadowCrypt"
version = "0.0.1"
description = "Quantum-powered cryptography"
authors = [
    {name = "Rohan Date",email = "rohan.s.date@icloud.com"}
]
license = "MIT"
icense-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "qiskit (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "qiskit-ibm-runtime (>=0.45.0,<0.46.0)",
    "pylatexenc (>=2.10,<3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pytest (>=9.0.2,<10.0.0)",
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Topic :: Security :: Cryptography",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
notebook = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "jupyterlab (>=4.5.2,<5.0.0)",
]

[project.urls]
Homepage = "https://github.com/rsdate/ShadowCrypt"
Issues = "https://github.com/rsdate/ShadowCrypt/issues"

# [tool.poetry]
# packages = [
#    { include = "scrypt" },
# ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
